# hash-rs

./: .gitignore  Cargo.toml  README.md  TODO.md  crates.js  search-index.js  settings.html  source-files.js
.github/workflows/: build.yml  doc.yml
benches/: adler32kb.rs  crc32.rs
examples/: crc32_make_table.rs  crc64_checksum.rs  maphash.rs
hash/: all.html  index.html  sidebar-items.js  trait.Hash.html  trait.Hash32.html  trait.Hash64.html
hash/adler32/: constant.SIZE.html  fn.checksum.html  fn.new.html  index.html  sidebar-items.js  struct.Digest.html
hash/crc32/: constant.CASTAGNOLI.html  constant.IEEE.html  constant.KOOPMAN.html  constant.SIZE.html  fn.checksum.html  fn.checksum_ieee.html  fn.make_table.html  fn.new.html  fn.new_ieee.html  fn.update.html  index.html  sidebar-items.js  struct.IEEE_TABLE.html  struct.Table.html
hash/crc64/: constant.ECMA.html  constant.ISO.html  constant.SIZE.html  fn.checksum.html  fn.make_table.html  fn.new.html  fn.update.html  index.html  sidebar-items.js  struct.Table.html
hash/fnv/: fn.new128.html  fn.new128a.html  fn.new32.html  fn.new32a.html  fn.new64.html  fn.new64a.html  index.html  sidebar-items.js
hash/maphash/: fn.make_seed.html  index.html  sidebar-items.js  struct.Hash.html  struct.Seed.html
implementors/hash/: trait.Hash64.js
implementors/lazy_static/: trait.LazyStatic.js
src/: lib.rs
src/adler32/: mod.rs
src/crc32/: digest.rs  mod.rs  simple.rs  slicing8.rs
src/crc64/: digest.rs  mod.rs  slicing8.rs
src/fnv/: mod.rs  sum128.rs  sum128a.rs  sum32.rs  sum32a.rs  sum64.rs  sum64a.rs
(+42 files in other folders)
