[package]
name = "hash"
version = "0.2.0"
edition = "2021"
rust-version = "1.65.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
rand = "0.8.5"

[dependencies.getrandom]
optional = true
version = "0.2.8"

[dev-dependencies]
getrandom = "0.2.8"
rand = "0.8.5"

[features]
default = ["maphash"]
maphash = ["getrandom"]
